<resources>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_title_edit_this_theme">議題の編集</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>


    <string name="save_as_pro">{fa_thumbs_up} 賛成意見</string>
    <string name="save_as_con">反対意見 {fa_thumbs_down}</string>
    <string name="hint">note here</string>
    <string name="hint_citation_resource">出典情報（URLも可）</string>
    <string name="toast_theme_name_edited">タイトルを変更しました</string>
    <string name="undo_theme_name_edited">元に戻す</string>

    <string name="Dialog_Button_Label_Positive">OK</string>
    <string name="Dialog_Button_Label_Negative">キャンセル</string>
    <string name="message_pleasewait">しばらくお待ちください</string>

    <string name="suggestion_hint_from">過去に入力した出典情報</string>

    <string name="error_image_not_found">読み込めませんでした。画像が削除されてしまったおそれがあります。</string>

    <string name="menu_title_done_reordering">OK</string>
    <string name="menu_title_cancel_reordering">キャンセル</string>

    <string name="citation_system_created_for_image">画像取り込み</string>
</resources>
