<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_main"
    >

    <!-- ボタン -->
    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTexts_container"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_save_as_pro"
            android:theme="@style/ProsSaveButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:gravity="left|center_vertical"
            android:text="@string/save_as_pro" />
        <Button
            android:id="@+id/button_save_as_con"
            android:theme="@style/ConsSaveButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:gravity="right|center_vertical"
            android:text="@string/save_as_con" />

        <ImageButton
            android:id="@+id/button_save_as_other"
            android:theme="@style/OtherButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:src="@drawable/ic_action_overflow"
            />
    </LinearLayout>

    <!-- 出典情報 -->
    <LinearLayout
        android:id="@+id/editTexts_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_marginLeft="4dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            >
            <AutoCompleteTextView
                android:id="@+id/editText_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_citation_resource"
                android:descendantFocusability="beforeDescendants"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="textAutoComplete"
                android:completionHint="@string/suggestion_hint_from"
                android:completionThreshold="1"
                android:nextFocusDown="@+id/editText_pages"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="pp."
            />
        <EditText
            android:id="@+id/editText_pages"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@+id/editText"
            android:maxLines="1"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:inputType="textMultiLine"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/hint" />

</merge>
